service/k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: godxfeed-backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.godxfeed.brojonat.com
    secretName: godxfeed-backend-tls
  rules:
  - host: "api.godxfeed.brojonat.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: godxfeed-backend
            port:
              number: 80
